<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>


    <groupId>com.jwebmp.guicedee.persistence</groupId>
    <artifactId>entity-assist</artifactId>
    <version>0.0.0_0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>Entity Assist</name>

    <description>A Domain Driven SQL Builder Generator for JPMS/JDK8</description>

    <properties>
        <surefireArgLine></surefireArgLine>
    </properties>

    <licenses>
        <license>
            <name>GPL 3</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>Marc Magon</name>
        <url>http://jwebmp.com</url>
    </organization>

    <developers>
        <developer>
            <id>GedMarc</id>
            <name>Marc Magon</name>
            <email>marc.magon@gmail.com</email>
            <url>https://github.com/GedMarc</url>
        </developer>
    </developers>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.jwebmp</groupId>
                <artifactId>jwebmp-bom</artifactId>
                <type>pom</type>
                <scope>import</scope>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jwebmp</groupId>
                <artifactId>jwebmp-parent</artifactId>
                <type>pom</type>
                <scope>import</scope>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <url>https://github.com/GedMarc/EntityAssist</url>

    <dependencies>
        <dependency>
            <groupId>com.jwebmp.guicedee.persistence</groupId>
            <artifactId>guiced-persistence</artifactId>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>com.jwebmp.guicedee.persistence</groupId>
            <artifactId>guiced-persistence-btm</artifactId>
            <scope>test</scope>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>com.jwebmp.guicedee.persistence</groupId>
            <artifactId>guiced-persistence-jpa</artifactId>
            <scope>test</scope>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>com.jwebmp.jpms.commons</groupId>
            <artifactId>commons-text</artifactId>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>com.jwebmp.thirdparty.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>com.jwebmp.jpms.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <type>jar</type>
        </dependency>

        <!-- Test Dependencies -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.jwebmp.thirdparty.hibernate</groupId>
            <artifactId>hibernate-jpamodelgen</artifactId>
            <version>${project.version}</version>
            <type>jar</type>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
       <dependency>
           <groupId>com.jwebmp.thirdparty</groupId>
           <artifactId>jakarta.xml.bind-api</artifactId>
        </dependency>

    </dependencies>
    <scm>
        <url>https://github.com/GedMarc/EntityAssist.git</url>
    </scm>

    <issueManagement>
        <system>Github</system>
        <url>https://github.com/GedMarc/EntityAssist/issues</url>
    </issueManagement>

    <ciManagement>
        <system>TeamCity</system>
        <url>http://jwebmp.com/teamcity</url>
    </ciManagement>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>5.5.0</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <!--suppress MavenModelInspection -->
                    <argLine>--add-opens
                        java.base/java.lang=com.google.guice,javassist ${surefireArgLine}
                    </argLine>
                    <testFailureIgnore>true</testFailureIgnore>
                    <!-- Sets the VM argument line used when unit tests are run. -->
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.hibernate.orm.tooling</groupId>
                <artifactId>hibernate-enhance-maven-plugin</artifactId>
                <version>5.4.3.Final</version>
                <executions>
                    <execution>
                        <configuration>
                            <failOnError>false</failOnError>
                            <enableLazyInitialization>true</enableLazyInitialization>
                            <enableDirtyTracking>false</enableDirtyTracking>
                            <enableAssociationManagement>false</enableAssociationManagement>
                            <enableExtendedEnhancement>false</enableExtendedEnhancement>
                        </configuration>
                        <phase>compile</phase>
                        <goals>
                            <goal>enhance</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <failOnError>false</failOnError>
                    <enableLazyInitialization>true</enableLazyInitialization>
                    <enableDirtyTracking>false</enableDirtyTracking>
                    <enableAssociationManagement>false</enableAssociationManagement>
                    <enableExtendedEnhancement>false</enableExtendedEnhancement>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>12</release>
                    <annotationProcessorPaths>
                        <annotationProcessorPath>
                            <groupId>com.jwebmp.thirdparty.hibernate</groupId>
                            <artifactId>hibernate-jpamodelgen</artifactId>
                            <version>${project.version}</version>
                        </annotationProcessorPath>
                        <path>
                            <groupId>com.jwebmp.thirdparty</groupId>
                            <artifactId>jakarta.xml.bind-api</artifactId>
                            <version>${project.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArguments>
                        <AaddGeneratedAnnotation>false</AaddGeneratedAnnotation>
                        <Adebug>true</Adebug>
                    </compilerArguments>

                </configuration>

            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/main/java</source>
                                <!--<source>src/jre10/java</source>-->
                                <source>src/jre11/java</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>jwebmp-distribution</id>
            <activation>
            </activation>
            <distributionManagement>
                <snapshotRepository>
                    <id>jwebmp-snapshot</id>
                    <name>JWebMPArtifactory-snapshots</name>
                    <url>https://jwebmp.com/artifactory/libs-snapshot-local</url>
                </snapshotRepository>
                <repository>
                    <id>jwebmp-release</id>
                    <name>JWebMPArtifactory-releases</name>
                    <url>https://jwebmp.com/artifactory/libs-release-local</url>
                </repository>
            </distributionManagement>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                    <passphrase>${gpg.passphrase}</passphrase>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>

        </profile>

        <profile>
            <id>sonartype-distribution</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <distributionManagement>
                <snapshotRepository>
                    <id>sonar-snapshot</id>
                    <name>SonarType-snapshots</name>
                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
                </snapshotRepository>
                <repository>
                    <id>sonar-release</id>
                    <name>SonarType-releases</name>
                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
            </distributionManagement>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                    <passphrase>${gpg.passphrase}</passphrase>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <!-- This plugin doesn't work inside pluginManagement, for some reason -->
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.8</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>default-deploy</id>
                                <phase>deploy</phase>
                                <goals>
                                    <goal>deploy</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <serverId>sonar-snapshot</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                            <stagingProgressTimeoutMinutes>300</stagingProgressTimeoutMinutes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-deploy-plugin</artifactId>
                        <version>3.0.0-M1</version>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>



</project>
